-added description on tags -added seed on gemma3 -pdf chunking(broken)

--- a/papers/templates/layouts/base.html
+++ b/papers/templates/layouts/base.html
@@ -139,4 +139,8 @@
   
   {% block extra_scripts %}{% endblock %}
 </body>
+<footer>
+  {% include 'components/footer.html' %}
+  
+</footer>
 </html>
