--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -10,23 +10,31 @@
   </h2>
 
   <div class="w-full flex flex-col items-center justify-center">
-    <form action="{% url 'paper_list' %}" method="get" class="w-full flex flex-col gap-2 items-center justify-center mb-4">
-      <div class="relative w-full sm:w-2/3">
-        <!-- Search Icon -->
-        <svg class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 w-5 h-5" 
-             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
-        </svg>
-        <!-- Input -->
-        <input
-          type="search"
-          name="q"
-          class="w-full p-3 pl-12 border-[2px] border-black rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-100"
-          placeholder="Search papers, authors, or topics..."
-          value="{{ request.GET.q }}">
-      </div>
-    </form>
+    <form action="{% url 'paper_list' %}" 
+      method="get" 
+      class="w-full flex flex-col gap-2 items-center justify-center mb-4">
+
+  <div class="relative w-full sm:w-2/3">
+    <!-- Search Icon -->
+    <svg class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 w-5 h-5" 
+         xmlns="http://www.w3.org/2000/svg" 
+         fill="none" viewBox="0 0 24 24" 
+         stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
+    </svg>
+
+    <!-- Search Input -->
+    <input
+      type="search"
+      name="q"
+      placeholder="Search papers, authors, or topics..."
+      value="{{ request.GET.q }}"
+      class="w-full p-3 pl-12 border-2 border-black rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-100"
+      autocomplete="off">
+  </div>
+</form>
+
 
     <div class="mt-6 flex flex-col gap-2 text-center">
       <a href="{% url 'paper_upload' %}" class="text-black hover:underline font-medium dark:text-zinc-300">
