--- a/papers/templates/profile/show.html
+++ b/papers/templates/profile/show.html
@@ -21,7 +21,7 @@
           </button>
 
           <!-- Logout Modal -->
-          <div x-show="open" x-transition class="fixed inset-0 bg-black/40 z-50 flex items-center justify-center">
+          <div x-cloak x-show="open" x-transition class="fixed inset-0 bg-black/40 z-50 flex items-center justify-center">
             <div class="bg-white border border-gray-200 p-6 w-full max-w-sm text-center">
               <h3 class="text-lg font-medium text-gray-800">Confirm Logout</h3>
               <p class="text-sm text-gray-500 mt-2">Are you sure you want to log out?</p>
